<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerLuas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/paddingM"
    tools:context=".ui.fragment.FragmentHitungLuas">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginXL"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/app_calculate_result"
        android:textColor="@color/black"
        android:textSize="@dimen/fontL" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginS"
        android:background="@drawable/border_round_10dp"
        android:gravity="end">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="@dimen/marginXXL"
            android:gravity="end"
            android:text="@string/app_result_hint"
            android:textColor="@color/black"
            android:textSize="@dimen/fontL" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginM"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPanjang"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginM"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edInputPanjang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_length_hint"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLebar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginM"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edInputLebar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_width_hint"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginM"
        android:fontFamily="@font/nunito_black"
        android:minHeight="0dp"
        android:paddingVertical="@dimen/paddingM"
        android:text="@string/app_calculate"
        android:textColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginS"
        android:fontFamily="@font/nunito_black"
        android:insetTop="10dp"
        android:insetBottom="10dp"
        android:paddingVertical="@dimen/paddingM"
        android:text="@string/app_calculate_reset"
        android:textColor="@color/black"
        app:backgroundTint="@color/lightGrey" />

</androidx.appcompat.widget.LinearLayoutCompat>